<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ProductFilterActivity">

    <EditText
        android:id="@+id/editTextSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/search_anything_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/product_name_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/editTextID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/product_id_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/editTextBarcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/barcode_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <Button
        android:id="@+id/buttonGetResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_results_btn_hint"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:layout_gravity="center"
        tools:ignore="TextContrastCheck" />
</LinearLayout>